compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_on_undecl.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "% pass through, since we can't say anything about this\nno_compile"
---
"no_compile"@(FileId(1), 55..65) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

