compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_on_var_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var sha : int sha()"

---
"sha"@(FileId(1), 4..7) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 14..17: cannot call or subscript `sha`
| note in file FileId(1) for 14..17: this is of type `int`
| error in file FileId(1) for 14..17: `int` is not callable
