compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_wrong_arg_all_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure k(var j : int) end p\nk(all)\n"
---
"k"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) int, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"j"@(FileId(1), 16..17) [Param(Reference(Var), No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 33..36: cannot use `all` here
| error in file FileId(1) for 33..36: `all` can't be used in subprogram calls
