compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_decl_sized_return.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "function sha : int end sha"
---
"sha"@(FileId(1), 9..12) [Subprogram(Function)]: function -> int
"<root>"@(dummy) [Module(No)]: <error>

