compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_decl_unsized_return_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "function sha : char(*) end sha"

---
"sha"@(FileId(1), 9..12) [Declared]: function -> char_n Any
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 15..22: invalid storage type
| error in file FileId(1) for 15..22: cannot use `char(*)` in `function` declarations
| info: `char(*)`'s refer to character sequences that do not have a fixed size known at compile-time
